--- a/templates/survey.html
+++ b/templates/survey.html
@@ -31,6 +31,25 @@
                 v-on:set-confidence="setConfidence"
                 v-on:add-seconds="addSeconds"
             ></book-question>
+            <div class="pagination">
+                <div 
+                    v-if="page > 1"
+                    class="pagination-button"
+                    v-on:click="setPage(page - 1)"
+                >
+                    &lt; Prev
+                </div>
+                <div class="pagination-text">
+                    [[ page ]] / [[ maxPage ]]
+                </div>
+                <div 
+                    v-if="maxPage > page"
+                    class="pagination-button"
+                    v-on:click="setPage(page + 1)"
+                >
+                    Next &gt;
+                </div>
+            </div>
         </div>
     </div>
     <script>
@@ -161,8 +180,8 @@
                 responses: responses,
                 pageSize: 5,
                 page: 1,
+                maxPage: 0,
                 pageBooks: [],
-                isNextPage: false,
             },
             created: function() {
                 this.setPageBooks();
@@ -172,7 +191,7 @@
                     var minIndex = (this.page - 1) * this.pageSize;
                     var maxIndex = Math.min(this.page * this.pageSize - 1, this.books.length);
                     this.pageBooks = this.books.slice(minIndex, maxIndex + 1);
-                    this.isNextPage = maxIndex + 1 < this.books.length;
+                    this.maxPage = Math.ceil(this.books.length / this.pageSize);
                 },
                 setResponse: function(bookId, cellIndex, color, tokens) {
                     var newCells = this.responses[bookId].cells.slice(0);
@@ -187,6 +206,10 @@
                 },
                 addSeconds: function(bookId, seconds) {
                     this.responses[bookId].seconds += seconds;
+                },
+                setPage: function(page) {
+                    this.page = page;
+                    window.scrollTo(0, 0);
                 },
             },
             watch: {
