--- a/templates/survey.html
+++ b/templates/survey.html
@@ -130,9 +130,7 @@
                             <div class="booktitle">
                                 [[ book.title ]]
                             </div>
-                            <div class="description">
-                                [[ book.description ]]
-                            </div>
+                            <div class="description">[[ book.description ]]</div>
                         </div>
                     </div>
                     <div class="form-column">
