--- a/static/survey.css
+++ b/static/survey.css
@@ -20,11 +20,32 @@ body {
 }
 
 .book-question {
+    position: relative;
     background-color: #eeeeee;
     padding: 8px 8px;
     margin-bottom: 12px;
     display: flex;
     flex-flow: row nowrap;
+}
+
+.book-question-shade {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #000000;
+    opacity: 0.8;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.shade-text {
+    flex: 0 0 auto;
+    text-align: center;
+    color: #ffffff;
+    font-size: 16px;
 }
 
 .text-column {
