adding feature to input words

--- a/templates/survey.html
+++ b/templates/survey.html
@@ -64,7 +64,7 @@
             for (var j = 0; j < 5; j++) {
                 responses[book.id].cells.push({
                     color: '#FFFFFF',
-                    tokens: [],
+                    token: '',
                 });
             }
         }
@@ -113,7 +113,7 @@
                     this.cellIndex = index;
                 },
                 setCellColor: function(color) {
-                    this.$emit('set-response', this.book.id, this.cellIndex, color, []);
+                    this.$emit('set-response', this.book.id, this.cellIndex, color, null);
                     if (this.cellIndex < 5 - 1) {
                         this.cellIndex += 1;
                     }
@@ -158,22 +158,40 @@
                     </div>
                     <div class="form-column">
                         <div class="form-section-title">
-                            Palette Color Picker
+                            Palette
                         </div>
                         <div class="palette">
                             <div 
                                 class="color-cell"
                                 v-for="(cell, i) in response.cells"
                                 v-bind:key="cell.color"
-                                v-bind:class="{ 'color-cell--active': i == cellIndex }"
-                                v-bind:style="{ backgroundColor: cell.color }"
-                                v-on:click="() => setCellIndex(i)"
-                            ></div>
+                            >
+                                <div 
+                                    class="color-square"
+                                    v-bind:class="{ 'color-cell--active': i == cellIndex }"
+                                    v-bind:style="{ backgroundColor: cell.color }"
+                                    v-on:click="() => setCellIndex(i)"
+                                ></div>
+                                <div 
+                                    class="color-token"
+                                >
+                                    [[ cell.token ]]
+                                </div>
+                            </div>
                         </div> 
+                        <div class="form-section-title">
+                            Color Picker for Palette
+                        </div>
                         <color-picker
                             v-bind:colors="colors"
                             v-on:pick="setCellColor"
                         ></color-picker>
+                        <div class="form-section-title">
+                            Textbox for Palette
+                        </div>
+                        <div class="form-section-description">
+                            Choose one word from the text on the left side that is the most related to this color.
+                        </div>
                         <div class="form-section-title">
                             Confidence on Your Palette
                         </div>
@@ -214,11 +232,11 @@
                     this.pageBooks = this.books.slice(minIndex, maxIndex + 1);
                     this.maxPage = Math.ceil(this.books.length / this.pageSize);
                 },
-                setResponse: function(bookId, cellIndex, color, tokens) {
+                setResponse: function(bookId, cellIndex, color, token) {
                     var newCells = this.responses[bookId].cells.slice(0);
                     newCells[cellIndex] = {
-                        color: color,
-                        tokens: tokens,
+                        color: color || newCells[cellIndex].color,
+                        token: token || newCells[cellIndex].token,
                     };
                     this.responses[bookId].cells = newCells;
                 },
