--- a/static/survey.css
+++ b/static/survey.css
@@ -34,7 +34,7 @@ body {
     align-items: center;
     justify-content: center;
     background-color: #000000;
-    opacity: 0.8;
+    opacity: 0.5;
     top: 0;
     left: 0;
     width: 100%;
@@ -88,6 +88,12 @@ body {
     color: #444444;
 }
 
+.form-section-description {
+    padding: 2px 0;
+    font-size: 12px;
+    color: #666666;
+}
+
 .palette {
     padding: 8px 0;
     display: flex;
@@ -97,10 +103,21 @@ body {
 
 .color-cell {
     flex: 0 0 50px;
-    margin-right: 12px;
+    margin: 0 6px;
+}
+
+.color-square {
+    margin-bottom: 4px;
     border: 3px solid #dddddd;
     height: 50px;
     cursor: pointer;
+}
+
+.color-token {
+    text-align: center;
+    width: 50px;
+    font-size: 8px;
+    color: #444444;
 }
 
 .color-cell--active {
