--- a/static/survey.css
+++ b/static/survey.css
@@ -85,6 +85,13 @@ body {
 .form-section-title {
     padding: 4px 0;
     font-size: 14px;
+    font-weight: bold;
+    color: #444444;
+}
+
+.form-sub-section-title {
+    padding: 4px 0;
+    font-size: 12px;
     color: #444444;
 }
 
@@ -92,6 +99,10 @@ body {
     padding: 2px 0;
     font-size: 12px;
     color: #666666;
+}
+
+.indented-content {
+    padding-left: 20px;
 }
 
 .palette {
@@ -116,8 +127,15 @@ body {
 .color-token {
     text-align: center;
     width: 50px;
-    font-size: 8px;
+    font-size: 9px;
+    min-height: 10px;
+    line-height: 10px;
     color: #444444;
+    word-break: break-all;
+}
+
+.color-token--error {
+    color: #ff2222;
 }
 
 .color-cell--active {
@@ -133,15 +151,30 @@ body {
 
 .color-picker-cell {
     border: 1px solid transparent;
-    flex: 0 0 19px;
+    flex: 0 0 18px;
     margin-right: 4px;
     margin-bottom: 4px;
-    height: 19px;
+    height: 18px;
     cursor: pointer;
 }
 
 .color-picker-cell:hover {
     border: 1px solid #444444;
+}
+
+.token-input-wrapper {
+    padding: 8px 0;
+}
+
+.token-input {
+    padding: 4px 8px;
+    font-size: 12px;
+    width: 100%;
+    outline: 1px solid #444444;
+}
+
+.token-input:active {
+    
 }
 
 .confidence-input {
