--- a/templates/task_index.html
+++ b/templates/task_index.html
@@ -14,7 +14,7 @@
 </section>
 <div class="container">
     <div class="content v-large-padded">
-        This is a dialog annotation study.
+        This is a dialog annotation study. <br />
         Please contact Users &amp; Information Lab. @ KAIST for further information.
     </div>
     <div class="content v-padded">
