--- a/templates/task_done.html
+++ b/templates/task_done.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 {% block body %}
+<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+        <div class="navbar-item">
+            Dialog Annotation Study
+        </div>
+    </div>
+</nav>
 <div class="container">
     <div class="content v-large-padded">
         <h3>Thank you for your participation!</h3>
