--- a/templates/task_draw.html
+++ b/templates/task_draw.html
@@ -26,7 +26,7 @@
                                 v-for="v in [1, 2, 3, 4, 5]" 
                                 :key="v" 
                                 class="button"
-                                :class="{ 'is-active': isValue(candidateId, question.id, v) }"
+                                :class="{ 'is-black': isValue(candidateId, question.id, v) }"
                                 @click="selectValue(candidateId, question.id, v)"
                             >
                                 [[ v ]]
